--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "devDependencies": {
     "@types/jquery": "^2.0.39",
     "clean-webpack-plugin": "^0.1.15",
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.26.0",
     "jquery": "^3.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.0"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "jquery": "^3.1.1"
   }
 }
