--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.26.0",
     "jquery": "^3.1.1",
+    "node-sass": "^4.3.0",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0"
   },
